--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,70 @@
+body{
+    background:lightgray;
+	margin: 0;
+	height: 100vh;
+	min-height: 100%;
+	width: 100%;
+}
 h1{
     color: black;
 }
-header{
-	background:dimgray;
-	height: 100px;
-	width: 100%;
-	text-align: center;
-}
-body{
-    text-align: center;
-    background:darkorange;
+h3{
+	margin: 0;
 }
 p{
     
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;  
+}
+a{
+	color: whitesmoke;
+	text-decoration: none;
+}
+a:hover {
+	color: #39ff14;
+}
+header{
+	background: #3B3B3B;
+	display: flex;
+	height: 100px;
+	width: 100%;
+	margin: 0;
+	box-sizing: border-box;
+	top: 0;
+	position: fixed;
+	justify-content: space-evenly;
+	z-index: 1;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+footer{
+	position: fixed;
+	display: flex;
+	height: 30px;
+	padding: 10px 10px 0px 10px;
+    bottom: 0;	
+	justify-content: center;
+
+	width: 100%;
+	background: #3B3B3B;
+	color: lightgray;
+	text-align: center;
+}
+
+.logo{
+	height: 100px;
+}
+.titulo{
+	color: #39ff14;
+}
+.indice{
     color: whitesmoke;  
 }
+
+.espacioheader{
+	position: relative;
+	height: 100px;
+	width: 100%;
+}
+
+
