--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,24 @@ body{
 	height: 100vh;
 	min-height: 100%;
 	width: 100%;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h1{
     color: black;
+	text-align: center;
+}
+h2{
+    background:black;
+	color: lightgray;
+	padding: 10px 20px;
+	margin: 0px 50px 0px 50px;
 }
 h3{
 	margin: 0;
 }
 p{
-    
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 70px;
+	c
     color: black;  
 }
 a{
@@ -34,7 +42,6 @@ header{
 	position: fixed;
 	justify-content: space-evenly;
 	z-index: 1;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 footer{
@@ -65,6 +72,9 @@ footer{
 	position: relative;
 	height: 100px;
 	width: 100%;
+}
+.titulopag{
+	font-size:xx-large;
 }
 
 
